--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+      <link rel="shortcut icon" href="img/icons/favicon.ico"/>
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
       <link rel="stylesheet" type="text/css" href="css/styles.css">
+      <title>Pokédex App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Simple JS App</title>
   </head>
   <body>
     <script src="js/scripts.js">
