--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="utf-8">
       <link rel="shortcut icon" href="img/icons/favicon.ico"/>
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/styles.css">
       <title>Pokédex App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <script src="js/scripts.js">
-    </script>
+    <header class="page-header">
+        <div class="logo">
+        <img src="img/pokemonlogo.png" alt="International Pokemon logo" class="page-header__item">
+        </div>
+    </header>
+    <div class="pokedex">
+      <script src="js/scripts.js"></script>
+    </div>
   </body>
 </html>
