--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   <body>
     <header class="page-header">
         <div class="logo">
-        <img src="img/pokemonlogo.png" alt="International Pokemon logo" class="page-header__item">
+          <img src="img/pokemonlogo.png" alt="International Pokemon logo" class="page-header__item">
+        </div>
+        <div class="pokedexpic">
+          <img src="img/pokedex.png" alt="pokedex" class="page-header__item">
         </div>
     </header>
-    <div class="pokedex">
-      <script src="js/scripts.js"></script>
-    </div>
+      <ul class="pokemon-list">
+      </ul>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
