--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </header>
       <ul class="pokemon-list">
       </ul>
+    <script src="js/promise-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
