--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <ul class="pokemon-list">
       </ul>
     <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
