add modal container div

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     </header>
       <ul class="pokemon-list">
       </ul>
+      <div id="modal-container"></div>
+  </body>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
-  </body>
 </html>
