added search bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <img src="img/pokedex.png" alt="pokedex" class="page-header__item">
         </div>
     </header>
+
+    <input type="text" id=pokeSearchInput onkeyup="pokemonRepository.searchFunction()" placeholder="Search for a Pokémon...">
+
       <ul class="pokemon-list">
       </ul>
       <div id="modal-container"></div>
