--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="shortcut icon" href="img/icons/favicon.ico"/>
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
       <link href="https://fonts.googleapis.com/css?family=Fira+Code:400,600&display=swap" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="css/styles.css">
+      <link rel="stylesheet" type="text/css" href="dist/styles.min.css">
       <title>Pokédex App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -27,5 +27,5 @@
   </body>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="dist/scripts.min.js"></script>
 </html>
